<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">
    <restriction
        android:key="enrollUrl"
        android:title="@string/restriction_enroll_url_title"
        android:description="@string/restriction_enroll_url_desc"
        android:restrictionType="string" />
    <restriction
        android:key="serverHost"
        android:title="@string/restriction_server_host_title"
        android:restrictionType="string" />
    <restriction
        android:key="serverPort"
        android:title="@string/restriction_server_port_title"
        android:restrictionType="string"
        android:defaultValue="8089" />
    <restriction
        android:key="serverProtocol"
        android:title="@string/restriction_server_protocol_title"
        android:restrictionType="string"
        android:defaultValue="ssl" />
    <restriction
        android:key="username"
        android:title="@string/restriction_username_title"
        android:restrictionType="string" />
    <restriction
        android:key="password"
        android:title="@string/restriction_password_title"
        android:restrictionType="string" />
    <restriction
        android:key="token"
        android:title="@string/restriction_token_title"
        android:restrictionType="string" />
    <restriction
        android:key="enrollPort"
        android:title="@string/restriction_enroll_port_title"
        android:restrictionType="string"
        android:defaultValue="8446" />
    <restriction
        android:key="callsign"
        android:title="@string/restriction_callsign_title"
        android:description="@string/restriction_callsign_desc"
        android:restrictionType="string" />
    <restriction
        android:key="team"
        android:title="@string/restriction_team_title"
        android:restrictionType="string"
        android:defaultValue="Cyan" />
    <restriction
        android:key="role"
        android:title="@string/restriction_role_title"
        android:restrictionType="string"
        android:defaultValue="Team Member" />
    <restriction
        android:key="reportingStrategy"
        android:title="@string/restriction_reporting_strategy_title"
        android:restrictionType="string"
        android:defaultValue="Dynamic" />
    <restriction
        android:key="deferToAtak"
        android:title="@string/restriction_defer_to_atak_title"
        android:restrictionType="string"
        android:defaultValue="WhenRunning" />
    <restriction
        android:key="pause"
        android:title="@string/restriction_pause_title"
        android:restrictionType="string"
        android:defaultValue="false" />
    <restriction
        android:key="serversJson"
        android:title="@string/restriction_servers_json_title"
        android:description="@string/restriction_servers_json_desc"
        android:restrictionType="string" />
    <restriction
        android:key="settingsLock"
        android:title="@string/restriction_settings_lock_title"
        android:description="@string/restriction_settings_lock_desc"
        android:restrictionType="string" />
    <restriction
        android:key="settingsLockClear"
        android:title="@string/restriction_settings_lock_clear_title"
        android:restrictionType="string"
        android:defaultValue="false" />
    <restriction
        android:key="allowInsecureTlsSoftAccept"
        android:title="@string/restriction_tls_soft_accept_title"
        android:restrictionType="string"
        android:defaultValue="false" />
    <restriction
        android:key="requestBatteryExemption"
        android:title="@string/restriction_battery_prompt_title"
        android:restrictionType="string"
        android:defaultValue="true" />
    <restriction
        android:key="preventSleepWhileTracking"
        android:title="@string/restriction_prevent_sleep_title"
        android:restrictionType="string"
        android:defaultValue="true" />
</restrictions>
